--- a/ui/interactive-art-VUE/package.json
+++ b/ui/interactive-art-VUE/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "tone": "^14.7.77",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
