--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .DS_Store
 node_modules
 /dist
+/env
+
+__pycache__/
+*.py[cod]
 
 
 # local env files
@@ -21,3 +25,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+.browserslistrc
