--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,4 +3,4 @@ deployment:
   tasks:
     - /bin/cp -R dist /home/interactiveart/
     - /bin/cp -R src/assets /home/interactiveart/src/
-    - /bin/cp -R server * /home/interactiveart/server/
+    - /bin/cp requirements.txt /home/interactiveart/server/
