updated server and yml

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,3 +5,4 @@ deployment:
     - /bin/cp -R src/assets /home/interactiveart/src/
     - /bin/cp -R server/* /home/interactiveart/server/
     - /bin/cp requirements.txt /home/interactiveart/server/
+    - touch server/tmp/restart.txt
