--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,6 +2,7 @@
 deployment:
   tasks:
     - /bin/cp -R dist /home/interactiveart/
+    - /bin/cp -R dist/* /home/interactiveart/public_html
     - /bin/cp -R src/assets /home/interactiveart/src/
     - /bin/cp -R server/* /home/interactiveart/server/
     - /bin/cp requirements.txt /home/interactiveart/server/
