--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,6 +3,6 @@ deployment:
   tasks:
     - /bin/cp -R dist/* /home/interactiveart/public_html
     - /bin/cp -R src/assets /home/interactiveart/src/
-    - /bin/cp -R server/* /home/interactiveart/api/
+    - /bin/cp -R api/* /home/interactiveart/api/
     - /bin/cp requirements.txt /home/interactiveart/api/
     - /bin/touch /home/interactiveart/api/tmp/restart.txt
