requests to backend flexible in local mode

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-SUBDOMAIN='backend'
-VUE_APP_BASE_URL="http://backend.localhost:5000"
+VUE_APP_BASE_URL="https://backend.interactiveart.web.illinois.edu"
