--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+cachelib==0.9.0
 click==8.1.3
 colorama==0.4.6
 colorgram.py==1.2.0
 Flask==2.2.2
+Flask-Caching==2.0.1
 Flask-Cors==3.0.10
 gunicorn==20.1.0
 importlib-metadata==5.1.0
