--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,17 +29,16 @@ jobs:
     - name: Commit and Push files
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        args: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git pull origin main
-          
-          # Add files to the Git index
-          git add -A
+      run: |
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
+        git pull origin main
 
-          # Commit changes with a message
-          git commit -m "Commit and push files from GitHub Actions workflow"
+        # Add files to the Git index
+        git add -A
 
-          # Push changes to the remote repository
-          git push origin main
+        # Commit changes with a message
+        git commit -m "Commit and push files from GitHub Actions workflow"
+
+        # Push changes to the remote repository
+        git push origin main
