--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git config --local user.email "actions@github.com"
-        git config --local user.name "GitHub Actions"
+        git config --local user.email "ethanbg2@illinois.edu"
+        git config --local user.name "ethanbg2"
         git pull origin main
 
         # Add files to the Git index
