--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,20 @@ Flask==2.2.2
 Flask-Caching==2.0.1
 Flask-Cors==3.0.10
 gunicorn==20.1.0
+imageio==2.25.1
 importlib-metadata==5.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+networkx==3.0
 numpy==1.23.5
+packaging==23.0
 Pillow==9.3.0
 python-dotenv==0.21.0
+PyWavelets==1.4.1
+scikit-image==0.19.3
+scipy==1.10.0
 six==1.16.0
+tifffile==2023.2.3
 Werkzeug==2.2.2
 zipp==3.11.0
